--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-firebase-hooks": "^5.1.1",
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "use-long-press": "^3.1.5"
   },
   "devDependencies": {
     "@types/dom-speech-recognition": "^0.0.1",
