--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-switch": "^1.0.3",
     "@tabler/icons-react": "^2.30.0",
     "@types/node": "20.4.10",
     "@types/react": "18.2.20",
