--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.4.13",
     "firebase": "^10.1.0",
     "next": "13.4.13",
+    "next-pwa": "^5.6.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
