--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^9.4.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-switch": "^1.0.3",
     "@tabler/icons-react": "^2.30.0",
@@ -22,7 +23,6 @@
     "eslint-config-next": "13.4.13",
     "firebase": "^10.1.0",
     "next": "13.4.13",
-    "next-pwa": "^5.6.0",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
