--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^9.4.0",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-switch": "^1.0.3",
     "@tabler/icons-react": "^2.30.0",
-    "@types/node": "20.4.10",
+    "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.13",
+    "eslint-config-next": "13.4.16",
     "firebase": "^10.1.0",
-    "next": "13.4.13",
-    "postcss": "8.4.27",
+    "next": "13.4.16",
+    "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -31,11 +32,11 @@
     "react-intersection-observer": "^9.5.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "use-long-press": "^3.1.5"
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/dom-speech-recognition": "^0.0.1",
-    "prettier": "^3.0.1",
-    "prettier-plugin-tailwindcss": "^0.5.2"
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3"
   }
 }
